@@ -31,7 +31,11 @@
                 <h1 class="p-name entry-title"><a href="${post.permalink()}" class="u-url">${post.title()|h}</a></h1>
                 <div class="metadata">
                     <p class="byline author vcard"><span class="byline-name fn" itemprop="author">
-                    % if author_pages_generated:
+                    % if author_pages_generated and multiple_authors_per_post:
+                        % for author in post.authors():
+                            <a href="${_link('author', author)}">${author|h}</a>
+                        % endfor
+                    % elif author_pages_generated:
                         <a href="${_link('author', post.author())}">${post.author()|h}</a>
                     % else:
                         ${post.author()|h}
